@@ -1,79 +1,0 @@
-name: Build executables for Windows 7 (legacy)
-on:
-  push:
-    branches: [ master, develop, build ]
-  pull_request:
-    branches: [ master, develop ]
-
-jobs:
-  build:
-
-    runs-on: windows-2019
-
-    steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-
-    - name: Gather build version
-      shell: powershell
-      run: |
-        mkdir dist
-        New-Item -Path Env: -Name VERSION -Value $(python.exe scripts\get_version.py)
-        echo "Building branch $env:GITHUB_REF - version $env:VERSION"
-        echo "::set-env name=VERSION::$env:VERSION"
-      env:
-        ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-
-    - name: Insatll requirements
-      shell: cmd
-      run: |
-        python -m pip install --upgrade pip setuptools --ignore-installed
-        python -m pip install --upgrade pypiwin32 wheel
-        python -m pip install -r requirements-build.txt
-
-    - name: Grab iso-639 lists
-      shell: powershell
-      run: |
-        copy $(python -c "import iso639; print(iso639.mapping.TABLE_PATH)") iso-639-3.tab
-        copy $(python -c "import iso639; print(iso639.mapping.MAPPING_PATH)") iso-639-3.json
-
-    - name: Build single executable
-      shell: cmd
-      run: pyinstaller FastFlix_Windows_OneFile.spec
-
-    - name: Build installer executable
-      shell: cmd
-      run: pyinstaller FastFlix_Windows_Installer.spec
-
-    - name: Package installer
-      shell: cmd
-      run: |
-        makensis.exe FastFlix.nsi
-        move FastFlix_installer.exe FastFlix_${{ env.VERSION }}_installer.exe
-
-    - name: Test executable
-      run: |
-        dist\FastFlix.exe --version
-        dist\FastFlix.exe --test
-
-    - name: Package single executable
-      shell: cmd
-      run: |
-        move dist\*.exe .
-        move docs\build-licenses.txt LICENSE
-
-    - name: Upload standalone executable artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: FastFlix_${{ env.VERSION }}_win64_windows7
-        path: |
-          FastFlix.exe
-          LICENSE
-
-    - name: Upload installer artifact
-      uses: actions/upload-artifact@v2
-      with:
-        name: FastFlix_${{ env.VERSION }}_installer_windows7
-        path: FastFlix_${{ env.VERSION }}_installer.exe
