@@ -12,7 +12,7 @@ repos:
     - id: check-byte-order-marker
     - id: debug-statements
     - id: check-added-large-files
-      exclude: tests/media/*
+      exclude: tests/media/.+
     - id: check-case-conflict
     - id: check-executables-have-shebangs
     - id: check-toml
